# Boboter_UI

./: .geminiignore  CMakeLists.txt  ControlsPage.qml  CustomTabButton.qml  Main.qml  README.md  SensorsPage.qml  SettingsPage.qml  StatusPage.qml  colors.qml  constants.h  main.cpp
cpp/: constants.h  main.cpp
qml/: Main.qml
qml/components/: CustomSmallTabButton.qml  CustomTabButton.qml
qml/pages/: DashboardPage.qml
qml/pages/Controls/: BuzzerControlsSubpage.qml  ControlsPage.qml  DriveControlsSubpage.qml  LEDSControlsSubpage.qml  LinefollowerControlsSubpage.qml  MotorsControlsSubpage.qml
qml/pages/Sensors/: BatterySensorSubpage.qml  BumpersSensorSubpage.qml  ColorsensorSensorSubpage.qml  EncodersSensorSubpage.qml  IMUSensorSubpage.qml  IOSensorSubpage.qml  LinefollowerSensorSubpage.qml  SensorsPage.qml  UltrasonicSensorSubpage.qml
qml/pages/Settings/: SettingsPage.qml
